[package]
name = "eperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { git = "https://github.com/LuxxxLucy/egg.git", branch = "eperf-log-br" }
thiserror = "1"
clap = { version = "4", features = ["cargo"] }

[dev-dependencies]
anyhow = "1"
anstream = "0.6.8"
